Add top directors, actor roles, director/actor pairings, and highest rated movie analysis

--- a/notebooks/movie_metadata.ipynb
+++ b/notebooks/movie_metadata.ipynb
@@ -9,13 +9,13 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
     "import polars as pl\n",
     "import polars.selectors as cs\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "import plotly.express as px\n",
-    "from plotly.subplots import make_subplots\n",
-    "import plotly.graph_objects as go"
+    "from plotly.subplots import make_subplots"
    ]
   },
   {
@@ -42,7 +42,9 @@
     "# 1. Read CSV into dataframe. mm_raw = raw movie metadata dataframe. `Released_Year` is\n",
     "# mapped to a string because there is at least 1 value in that column that cannot be\n",
     "# inferred as an integer. This is investigated further below.\n",
-    "mm_raw = pl.read_csv(source=movie_metadata_path, schema_overrides={\"Released_Year\": pl.String})\n",
+    "mm_raw = pl.read_csv(\n",
+    "    source=movie_metadata_path, schema_overrides={\"Released_Year\": pl.String}\n",
+    ")\n",
     "\n",
     "# 2. Drop the `Poster_Link`, `Overview`, and `Certificate` columns.\n",
     "mm = mm_raw.select(pl.col(\"*\").exclude(\"Poster_Link\", \"Overview\", \"Certificate\"))\n",
@@ -367,14 +369,14 @@
     "    height=800,  # Adjust the height as needed\n",
     "    width=800,  # Adjust the width as needed\n",
     "    title={\n",
-    "        'text': \"Numeric Column Distributions\",\n",
-    "        'y': 0.965,\n",
-    "        'x': 0.5,\n",
-    "        'xanchor': 'center',\n",
-    "        'yanchor': 'top'\n",
+    "        \"text\": \"Numeric Column Distributions\",\n",
+    "        \"y\": 0.965,\n",
+    "        \"x\": 0.5,\n",
+    "        \"xanchor\": \"center\",\n",
+    "        \"yanchor\": \"top\",\n",
     "    },\n",
     "    showlegend=False,\n",
-    "    margin=dict(t=85, l=30, r=30, b=30)\n",
+    "    margin=dict(t=85, l=30, r=30, b=30),\n",
     ")\n",
     "\n",
     "# Show the plot\n",
@@ -433,7 +435,7 @@
    "id": "34",
    "metadata": {},
    "source": [
-    "## Analysis"
+    "### Handling Genres"
    ]
   },
   {
@@ -451,13 +453,225 @@
    "id": "36",
    "metadata": {},
    "source": [
-    "There are 21 unique genres. The genres could be multi-hot encoded across 21 new columns as would need to be done in pandas. Instead, the functionality of polars `List` type column will be used for analysis operations involving the genres."
+    "There are 21 unique genres. For analysis operations, the genres could be multi-hot encoded across 21 new columns. Instead, the functionality of the polars `List` type column will be used for the operations involving the genres. Note that pandas does not have a list data type and thus would need the encoding."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37",
+   "metadata": {},
+   "source": [
+    "## Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38",
+   "metadata": {},
+   "source": [
+    "### Top Directors Average IMDB Rating\n",
+    "Find the 3 directors with the most movies. What is the average imdb score for each?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    mm\n",
+    "    .group_by(\"director\")\n",
+    "    .agg(\n",
+    "        pl.len().alias(\"movie_count\"),\n",
+    "        pl.mean(\"imdb_rating\").round(2).alias(\"avg_imdb_rating\"),\n",
+    "    )\n",
+    "    .sort(by=\"movie_count\", descending=True)\n",
+    "    .head(3)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40",
+   "metadata": {},
+   "source": [
+    "### Actor Roles\n",
+    "Find actors with the most leading roles (`star1`). Find the actors with the most roles.\n",
+    "#### Actors with the most leading roles (`star1`)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    mm\n",
+    "    .group_by(\"star1\")\n",
+    "    .len()\n",
+    "    .sort(by=\"len\", descending=True)\n",
+    "    .head(10)\n",
+    "    .select(\n",
+    "        pl.col(\"star1\").alias(\"actor\"),\n",
+    "        pl.col(\"len\").alias(\"leading_roles\"),\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42",
+   "metadata": {},
+   "source": [
+    "#### Actors with the most roles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    mm\n",
+    "    .select(\n",
+    "        pl.col(\"star1\"),\n",
+    "        pl.col(\"star2\"),\n",
+    "        pl.col(\"star3\"),\n",
+    "        pl.col(\"star4\"),\n",
+    "    )\n",
+    "    .melt()\n",
+    "    .group_by(\"value\")\n",
+    "    .len()\n",
+    "    .sort(by=\"len\", descending=True)\n",
+    "    .head(10)\n",
+    "    .select(\n",
+    "        pl.col(\"value\").alias(\"actor\"),\n",
+    "        pl.col(\"len\").alias(\"roles\"),\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44",
+   "metadata": {},
+   "source": [
+    "### Director/Actor Pairings\n",
+    "For directors Steven Spielberg and Martin Scorsese, which actors have they worked with the most.\n",
+    "#### Steven Spielberg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    mm\n",
+    "    .filter(pl.col(\"director\") == \"Steven Spielberg\")\n",
+    "    .select(\n",
+    "        pl.col(\"star1\"),\n",
+    "        pl.col(\"star2\"),\n",
+    "        pl.col(\"star3\"),\n",
+    "        pl.col(\"star4\"),\n",
+    "    )\n",
+    "    .melt()\n",
+    "    .group_by(\"value\")\n",
+    "    .len()\n",
+    "    .sort(by=\"len\", descending=True)\n",
+    "    .head(3)\n",
+    "    .select(\n",
+    "        pl.col(\"value\").alias(\"actor\"),\n",
+    "        pl.col(\"len\").alias(\"worked_with_spielberg\"),\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46",
+   "metadata": {},
+   "source": [
+    "#### Martin Scorsese"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    mm\n",
+    "    .filter(pl.col(\"director\") == \"Martin Scorsese\")\n",
+    "    .select(\n",
+    "        pl.col(\"star1\"),\n",
+    "        pl.col(\"star2\"),\n",
+    "        pl.col(\"star3\"),\n",
+    "        pl.col(\"star4\"),\n",
+    "    )\n",
+    "    .melt()\n",
+    "    .group_by(\"value\")\n",
+    "    .len()\n",
+    "    .sort(by=\"len\", descending=True)\n",
+    "    .head(3)\n",
+    "    .select(\n",
+    "        pl.col(\"value\").alias(\"actor\"),\n",
+    "        pl.col(\"len\").alias(\"worked_with_scorsese\"),\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48",
+   "metadata": {},
+   "source": [
+    "### Highest Rated Movie 2006-2016\n",
+    "Find the highest rated movie in each year from 2006-2016."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    mm\n",
+    "    .filter(pl.col(\"released_year\").is_between(2006, 2016))\n",
+    "    .group_by(\"released_year\")\n",
+    "    .agg(\n",
+    "        pl.col(\"series_title\").gather(pl.col(\"imdb_rating\").arg_max()).alias(\"highest_rated_movie\"),\n",
+    "        pl.col(\"imdb_rating\").max(),\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mm.filter(pl.col(\"released_year\") == 2008).sort(by=\"imdb_rating\", descending=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": []
